@@ -1,6 +1,7 @@
 package com.degen.backend.service;
 
 import com.degen.backend.dto.LeaderboardEntryDto;
+import com.degen.backend.dto.RoundLeaderboardEntryDto;
 import com.degen.backend.entity.*;
 import com.degen.backend.repository.*;
 import org.springframework.stereotype.Service;
@@ -9,7 +10,7 @@ import java.util.stream.Collectors;
 
 @Service
 public class LeaderboardService {
-    
+
     private final TournamentRoundRepository tournamentRoundRepository;
     private final RoundTeeTimeRepository roundTeeTimeRepository;
     private final PlayerScorecardRepository playerScorecardRepository;
@@ -37,16 +38,17 @@ public class LeaderboardService {
      * Points include:
      * 1. Tee-time individual ranking: 3 for 1st, 2 for 2nd, 1 for 3rd
      * 2. Inter-group team ranking: 3 for 1st team, 2 for 2nd, 1 for 3rd
-     * 3. Individual games: For Split Skins, use total game_points; for Stroke, use net scores
+     * 3. Individual games: For Split Skins, use total game_points; for Stroke, use
+     * net scores
      * Ties are handled by averaging points
      */
     public List<LeaderboardEntryDto> getTournamentLeaderboard(Long tournamentId) {
         System.out.println("\n===== getTournamentLeaderboard called for tournament " + tournamentId + " =====");
         // Get all rounds for tournament
         List<TournamentRound> rounds = tournamentRoundRepository.findByTournamentId(tournamentId);
-        
+
         System.out.println("Found " + rounds.size() + " rounds for tournament " + tournamentId);
-        
+
         if (rounds.isEmpty()) {
             System.out.println("No rounds found - returning empty leaderboard");
             return new ArrayList<>();
@@ -58,10 +60,10 @@ public class LeaderboardService {
         // Process each round
         for (TournamentRound round : rounds) {
             System.out.println("Processing round " + round.getId());
-            
+
             // Get all tee times for this round
             List<RoundTeeTime> teeTimes = roundTeeTimeRepository.findAllByTournamentRoundId(round.getId());
-            
+
             System.out.println("  Found " + teeTimes.size() + " tee times for round " + round.getId());
 
             if (teeTimes.isEmpty()) {
@@ -71,8 +73,8 @@ public class LeaderboardService {
 
             // Check if this round has any scores at all
             boolean hasAnyScores = teeTimes.stream()
-                .flatMap(teeTime -> playerScorecardRepository.findByRoundTeeTimeId(teeTime.getId()).stream())
-                .anyMatch(sc -> sc.getGrossScore() != null || sc.getNetScore() != null);
+                    .flatMap(teeTime -> playerScorecardRepository.findByRoundTeeTimeId(teeTime.getId()).stream())
+                    .anyMatch(sc -> sc.getGrossScore() != null || sc.getNetScore() != null);
 
             if (!hasAnyScores) {
                 System.out.println("  Round " + round.getId() + " has no scores entered - skipping from leaderboard");
@@ -80,7 +82,7 @@ public class LeaderboardService {
             }
 
             System.out.println("  Round " + round.getId() + " has scores - processing");
-            
+
             // Check if this is an Individual game
             if (round.getGame() != null && round.getGame().getId() == 4L) {
                 // Individual game - handle separately
@@ -93,11 +95,10 @@ public class LeaderboardService {
 
                     // Group by player and sum game points for this tee time
                     Map<Long, Integer> playerTeeTimeScores = scorecards.stream()
-                        .filter(sc -> sc.getGamePoints() != null)
-                        .collect(Collectors.groupingBy(
-                            sc -> sc.getPlayer().getId(),
-                            Collectors.summingInt(PlayerScorecard::getGamePoints)
-                        ));
+                            .filter(sc -> sc.getGamePoints() != null)
+                            .collect(Collectors.groupingBy(
+                                    sc -> sc.getPlayer().getId(),
+                                    Collectors.summingInt(PlayerScorecard::getGamePoints)));
 
                     // Rank players and assign tee-time points
                     assignTeeTimePoints(playerTeeTimeScores, scorecards, leaderboard, round.getId());
@@ -107,12 +108,12 @@ public class LeaderboardService {
                 assignTeamPoints(teeTimes, leaderboard, round.getId(), round);
             }
         }
-        
+
         System.out.println("Leaderboard has " + leaderboard.size() + " entries");
         List<LeaderboardEntryDto> result = leaderboard.values().stream()
-            .sorted(Comparator.comparing(LeaderboardEntryDto::getTotalPoints).reversed())
-            .collect(Collectors.toList());
-        
+                .sorted(Comparator.comparing(LeaderboardEntryDto::getTotalPoints).reversed())
+                .collect(Collectors.toList());
+
         System.out.println("Returning " + result.size() + " leaderboard entries");
         return result;
     }
@@ -123,10 +124,10 @@ public class LeaderboardService {
      * For Split Skins Individual: Rank by total game_points
      */
     private void processIndividualGameRound(TournamentRound round, List<RoundTeeTime> teeTimes,
-                                            Map<Long, LeaderboardEntryDto> leaderboard) {
+            Map<Long, LeaderboardEntryDto> leaderboard) {
         Long scoringTypeId = (round.getScoringType() != null)
-            ? round.getScoringType().getId()
-            : null;
+                ? round.getScoringType().getId()
+                : null;
 
         // Get all player scorecards for this round
         Map<Long, List<PlayerScorecard>> playerScorecards = new HashMap<>();
@@ -151,40 +152,41 @@ public class LeaderboardService {
             for (Map.Entry<Long, List<PlayerScorecard>> entry : playerScorecards.entrySet()) {
                 Long playerId = entry.getKey();
                 double totalPoints = entry.getValue().stream()
-                    .filter(sc -> sc.getGamePoints() != null)
-                    .mapToDouble(sc -> sc.getGamePoints() / 100.0) // Convert from cents
-                    .sum();
+                        .filter(sc -> sc.getGamePoints() != null)
+                        .mapToDouble(sc -> sc.getGamePoints() / 100.0) // Convert from cents
+                        .sum();
                 playerGamePoints.put(playerId, totalPoints);
             }
 
             // Rank players by game points (descending)
             List<Map.Entry<Long, Double>> sortedPlayers = playerGamePoints.entrySet().stream()
-                .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
-                .collect(Collectors.toList());
+                    .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
+                    .toList();
 
             // Assign points: top player gets all their points, others get proportional
             for (Map.Entry<Long, Double> entry : sortedPlayers) {
                 Long playerId = entry.getKey();
                 LeaderboardEntryDto leaderboardEntry = leaderboard.computeIfAbsent(playerId,
-                    pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
                 leaderboardEntry.addRoundPoints(round.getId(), entry.getValue());
             }
         } else {
-            // Stroke Individual (or default): Rank by total net score (ascending/lowest first)
+            // Stroke Individual (or default): Rank by total net score (ascending/lowest
+            // first)
             Map<Long, Integer> playerNetScores = new HashMap<>();
             for (Map.Entry<Long, List<PlayerScorecard>> entry : playerScorecards.entrySet()) {
                 Long playerId = entry.getKey();
                 int totalNet = entry.getValue().stream()
-                    .filter(sc -> sc.getNetScore() != null)
-                    .mapToInt(PlayerScorecard::getNetScore)
-                    .sum();
+                        .filter(sc -> sc.getNetScore() != null)
+                        .mapToInt(PlayerScorecard::getNetScore)
+                        .sum();
                 playerNetScores.put(playerId, totalNet);
             }
 
             // Rank players by net score (ascending - lowest/best first)
             List<Map.Entry<Long, Integer>> sortedPlayers = playerNetScores.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue())
-                .collect(Collectors.toList());
+                    .sorted(Map.Entry.comparingByValue())
+                    .toList();
 
             // Assign points: 1st gets numPlayers points, down to 1 for last
             int numPlayers = sortedPlayers.size();
@@ -197,7 +199,7 @@ public class LeaderboardService {
 
                 int nextRank = currentRank + 1;
                 while (nextRank < sortedPlayers.size() &&
-                       sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
+                        sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
                     tiedIndices.add(nextRank);
                     nextRank++;
                 }
@@ -210,7 +212,7 @@ public class LeaderboardService {
                 for (int idx : tiedIndices) {
                     Long playerId = sortedPlayers.get(idx).getKey();
                     LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
-                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+                            pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
                     entry.addRoundPoints(round.getId(), avgPoints);
                 }
 
@@ -232,16 +234,16 @@ public class LeaderboardService {
 
         // Map to store player names
         Map<Long, String> playerNames = new HashMap<>();
-        scorecards.forEach(sc -> playerNames.put(sc.getPlayer().getId(), 
-            sc.getPlayer().getFirstName() + " " + sc.getPlayer().getLastName()));
+        scorecards.forEach(sc -> playerNames.put(sc.getPlayer().getId(),
+                sc.getPlayer().getFirstName() + " " + sc.getPlayer().getLastName()));
 
         // Sort players by their score (highest first)
         List<Map.Entry<Long, Integer>> sortedPlayers = playerScores.entrySet().stream()
-            .sorted((a, b) -> b.getValue().compareTo(a.getValue())) // Descending
-            .collect(Collectors.toList());
+                .sorted((a, b) -> b.getValue().compareTo(a.getValue())) // Descending
+                .toList();
 
         // Points array: [3, 2, 1] for top 3 finishers
-        int[] pointsArray = {3, 2, 1};
+        int[] pointsArray = { 3, 2, 1 };
 
         int currentRank = 0;
         int pointsIndex = 0;
@@ -253,8 +255,8 @@ public class LeaderboardService {
             tiedIndices.add(currentRank);
 
             int nextRank = currentRank + 1;
-            while (nextRank < sortedPlayers.size() && 
-                   sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
+            while (nextRank < sortedPlayers.size() &&
+                    sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
                 tiedIndices.add(nextRank);
                 nextRank++;
             }
@@ -276,10 +278,10 @@ public class LeaderboardService {
             // Assign points to tied players
             for (int idx : tiedIndices) {
                 Long playerId = sortedPlayers.get(idx).getKey();
-                
-                LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId, 
-                    pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
-                
+
+                LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
+                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+
                 entry.addRoundPoints(roundId, pointsToAward);
             }
 
@@ -290,13 +292,14 @@ public class LeaderboardService {
     /**
      * Calculate and assign inter-group team points to players
      * Teams compete across all tee times in a round
-     * For Nines: Points: 3 for best team, 2 for 2nd best, 1 for 3rd best (based on gamePoints)
+     * For Nines: Points: 3 for best team, 2 for 2nd best, 1 for 3rd best (based on
+     * gamePoints)
      * For Stroke: Points based on net scores (best/lowest gets most points)
      */
-    private void assignTeamPoints(List<RoundTeeTime> teeTimes, 
-                                   Map<Long, LeaderboardEntryDto> leaderboard,
-                                   Long roundId,
-                                   TournamentRound round) {
+    private void assignTeamPoints(List<RoundTeeTime> teeTimes,
+            Map<Long, LeaderboardEntryDto> leaderboard,
+            Long roundId,
+            TournamentRound round) {
         try {
             if (teeTimes.isEmpty()) {
                 return;
@@ -304,292 +307,289 @@ public class LeaderboardService {
 
             // Check if this is a stroke round (scoring_type_id = 1 for Stroke)
             Long scoringTypeId = (round.getScoringType() != null)
-                ? round.getScoringType().getId()
-                : null;
+                    ? round.getScoringType().getId()
+                    : null;
             boolean isStrokeRound = scoringTypeId != null && scoringTypeId == 1;
-            
-            System.out.println("DEBUG: Round " + roundId + " scoringTypeId=" + scoringTypeId + " isStrokeRound=" + isStrokeRound);
 
-        // Collect all teams in this round and their scores
-        Map<Long, Integer> teamScores = new HashMap<>();
-        Map<Long, RoundTeam> teamMap = new HashMap<>();
-        Map<Long, List<Long>> teamPlayers = new HashMap<>();
-        Map<Long, String> playerNames = new HashMap<>();  // To create leaderboard entries
+            System.out.println(
+                    "DEBUG: Round " + roundId + " scoringTypeId=" + scoringTypeId + " isStrokeRound=" + isStrokeRound);
 
-        for (RoundTeeTime teeTime : teeTimes) {
-            List<RoundTeam> teams = roundTeamRepository.findByRoundTeeTimeId(teeTime.getId());
+            // Collect all teams in this round and their scores
+            Map<Long, Integer> teamScores = new HashMap<>();
+            Map<Long, RoundTeam> teamMap = new HashMap<>();
+            Map<Long, List<Long>> teamPlayers = new HashMap<>();
+            Map<Long, String> playerNames = new HashMap<>(); // To create leaderboard entries
 
-            for (RoundTeam team : teams) {
-                List<TeamHoleScore> teamHoleScores = teamHoleScoreRepository.findByRoundTeamId(team.getId());
-                
-                int teamScore;
-                if (isStrokeRound) {
-                    // For stroke rounds, sum net scores
-                    teamScore = teamHoleScores.stream()
-                        .map(TeamHoleScore::getNetScore)
-                        .filter(ns -> ns != null)
-                        .mapToInt(Integer::intValue)
-                        .sum();
-                } else {
-                    // For Nines, sum game points
-                    teamScore = teamHoleScores.stream()
-                        .filter(ths -> ths.getGamePoints() != null)
-                        .mapToInt(TeamHoleScore::getGamePoints)
-                        .sum();
-                }
+            for (RoundTeeTime teeTime : teeTimes) {
+                List<RoundTeam> teams = roundTeamRepository.findByRoundTeeTimeId(teeTime.getId());
 
-                teamScores.put(team.getId(), teamScore);
-                teamMap.put(team.getId(), team);
+                for (RoundTeam team : teams) {
+                    List<TeamHoleScore> teamHoleScores = teamHoleScoreRepository.findByRoundTeamId(team.getId());
 
-                // Track which players are on this team
-                List<Long> playerIds = new ArrayList<>();
-                if (team.getPlayer1Id() != null) playerIds.add(team.getPlayer1Id());
-                if (team.getPlayer2Id() != null) playerIds.add(team.getPlayer2Id());
-                if (team.getPlayer3Id() != null) playerIds.add(team.getPlayer3Id());
-                teamPlayers.put(team.getId(), playerIds);
-                
-                // Populate player names map
-                for (Long playerId : playerIds) {
-                    if (!playerNames.containsKey(playerId)) {
-                        Optional<Player> playerOpt = playerRepository.findById(playerId);
-                        if (playerOpt.isPresent()) {
-                            Player player = playerOpt.get();
-                            playerNames.put(playerId, player.getFirstName() + " " + player.getLastName());
+                    int teamScore;
+                    if (isStrokeRound) {
+                        // For stroke rounds, sum net scores
+                        teamScore = teamHoleScores.stream()
+                                .map(TeamHoleScore::getNetScore)
+                                .filter(Objects::nonNull)
+                                .mapToInt(Integer::intValue)
+                                .sum();
+                    } else {
+                        // For Nines, sum game points
+                        teamScore = teamHoleScores.stream()
+                                .filter(ths -> ths.getGamePoints() != null)
+                                .mapToInt(TeamHoleScore::getGamePoints)
+                                .sum();
+                    }
+
+                    teamScores.put(team.getId(), teamScore);
+                    teamMap.put(team.getId(), team);
+
+                    // Track which players are on this team
+                    List<Long> playerIds = new ArrayList<>();
+                    if (team.getPlayer1Id() != null)
+                        playerIds.add(team.getPlayer1Id());
+                    if (team.getPlayer2Id() != null)
+                        playerIds.add(team.getPlayer2Id());
+                    if (team.getPlayer3Id() != null)
+                        playerIds.add(team.getPlayer3Id());
+                    teamPlayers.put(team.getId(), playerIds);
+
+                    // Populate player names map
+                    for (Long playerId : playerIds) {
+                        if (!playerNames.containsKey(playerId)) {
+                            Optional<Player> playerOpt = playerRepository.findById(playerId);
+                            playerOpt.ifPresent(player -> playerNames.put(playerId, player.getFirstName() + " " + player.getLastName()));
                         }
                     }
                 }
             }
-        }
 
-        if (teamScores.isEmpty()) {
-            System.out.println("  No team scores found!");
-            return;
-        }
+            if (teamScores.isEmpty()) {
+                System.out.println("  No team scores found!");
+                return;
+            }
 
-        // Check if all teams have 0 score (no actual scores entered)
-        boolean hasAnyScore = teamScores.values().stream().anyMatch(score -> score > 0);
-        if (!hasAnyScore) {
-            System.out.println("  No actual scores entered for any team - skipping team points calculation");
-            return;
-        }
+            // Check if all teams have 0 score (no actual scores entered)
+            boolean hasAnyScore = teamScores.values().stream().anyMatch(score -> score > 0);
+            if (!hasAnyScore) {
+                System.out.println("  No actual scores entered for any team - skipping team points calculation");
+                return;
+            }
 
-        System.out.println("  Team scores: " + teamScores);
+            System.out.println("  Team scores: " + teamScores);
 
-        // Rank teams by score
-        List<Map.Entry<Long, Integer>> sortedTeams;
-        if (isStrokeRound) {
-            // For stroke, ascending (lowest/best score first)
-            sortedTeams = teamScores.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue())
-                .collect(Collectors.toList());
-        } else {
-            // For Nines, descending (highest/best score first)
-            sortedTeams = teamScores.entrySet().stream()
-                .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
-                .collect(Collectors.toList());
-        }
+            // Rank teams by score
+            List<Map.Entry<Long, Integer>> sortedTeams;
+            if (isStrokeRound) {
+                // For stroke, ascending (lowest/best score first)
+                sortedTeams = teamScores.entrySet().stream()
+                        .sorted(Map.Entry.comparingByValue())
+                        .collect(Collectors.toList());
+            } else {
+                // For Nines, descending (highest/best score first)
+                sortedTeams = teamScores.entrySet().stream()
+                        .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
+                        .collect(Collectors.toList());
+            }
 
-        int numTeams = sortedTeams.size();
-        
-        if (isStrokeRound) {
-            System.out.println("  Using STROKE ranking");
-            // For stroke rounds: assign points where 1st place gets numTeams points, last gets 1
-            int currentRank = 0;
+            int numTeams = sortedTeams.size();
 
-            while (currentRank < sortedTeams.size()) {
-                // Find all teams tied at current rank
-                Integer currentScore = sortedTeams.get(currentRank).getValue();
-                List<Integer> tiedIndices = new ArrayList<>();
-                tiedIndices.add(currentRank);
+            if (isStrokeRound) {
+                System.out.println("  Using STROKE ranking");
+                // For stroke rounds: assign points where 1st place gets numTeams points, last
+                // gets 1
+                int currentRank = 0;
 
-                int nextRank = currentRank + 1;
-                while (nextRank < sortedTeams.size() && 
-                       sortedTeams.get(nextRank).getValue().equals(currentScore)) {
-                    tiedIndices.add(nextRank);
-                    nextRank++;
-                }
+                while (currentRank < sortedTeams.size()) {
+                    // Find all teams tied at current rank
+                    Integer currentScore = sortedTeams.get(currentRank).getValue();
+                    List<Integer> tiedIndices = new ArrayList<>();
+                    tiedIndices.add(currentRank);
 
-                // Calculate points for this rank
-                int pointsForBest = numTeams - currentRank;
-                int pointsForWorst = numTeams - (currentRank + tiedIndices.size() - 1);
-                double avgPoints = (pointsForBest + pointsForWorst) / 2.0;
-                
-                System.out.println("    Rank " + (currentRank + 1) + ": " + tiedIndices.size() + " teams with score " + currentScore + ", assigning " + avgPoints + " points each");
+                    int nextRank = currentRank + 1;
+                    while (nextRank < sortedTeams.size() &&
+                            sortedTeams.get(nextRank).getValue().equals(currentScore)) {
+                        tiedIndices.add(nextRank);
+                        nextRank++;
+                    }
 
-                // Award points to all players on the tied teams
-                for (int idx : tiedIndices) {
-                    Long teamId = sortedTeams.get(idx).getKey();
-                    List<Long> playerIds = teamPlayers.get(teamId);
+                    // Calculate points for this rank
+                    int pointsForBest = numTeams - currentRank;
+                    int pointsForWorst = numTeams - (currentRank + tiedIndices.size() - 1);
+                    double avgPoints = (pointsForBest + pointsForWorst) / 2.0;
 
-                    if (playerIds != null) {
-                        for (Long playerId : playerIds) {
-                            LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
-                                pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
-                            entry.addRoundPoints(roundId, avgPoints);
+                    System.out.println("    Rank " + (currentRank + 1) + ": " + tiedIndices.size()
+                            + " teams with score " + currentScore + ", assigning " + avgPoints + " points each");
+
+                    // Award points to all players on the tied teams
+                    for (int idx : tiedIndices) {
+                        Long teamId = sortedTeams.get(idx).getKey();
+                        List<Long> playerIds = teamPlayers.get(teamId);
+
+                        if (playerIds != null) {
+                            for (Long playerId : playerIds) {
+                                LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
+                                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+                                entry.addRoundPoints(roundId, avgPoints);
+                            }
                         }
                     }
+
+                    currentRank = nextRank;
                 }
+            } else {
+                System.out.println("  Using NINES ranking (gamePoints)");
+                // For Nines: use original logic with [3, 2, 1] points
+                // Points array: [3, 2, 1] for top 3 teams
+                int[] pointsArray = { 3, 2, 1 };
 
-                currentRank = nextRank;
-            }
-        } else {
-            System.out.println("  Using NINES ranking (gamePoints)");
-            // For Nines: use original logic with [3, 2, 1] points
-            // Points array: [3, 2, 1] for top 3 teams
-            int[] pointsArray = {3, 2, 1};
+                int currentRank = 0;
+                int pointsIndex = 0;
 
-            int currentRank = 0;
-            int pointsIndex = 0;
+                while (currentRank < sortedTeams.size() && pointsIndex < pointsArray.length) {
+                    // Find all teams tied at current rank
+                    Integer currentScore = sortedTeams.get(currentRank).getValue();
+                    List<Integer> tiedIndices = new ArrayList<>();
+                    tiedIndices.add(currentRank);
 
-            while (currentRank < sortedTeams.size() && pointsIndex < pointsArray.length) {
-                // Find all teams tied at current rank
-                Integer currentScore = sortedTeams.get(currentRank).getValue();
-                List<Integer> tiedIndices = new ArrayList<>();
-                tiedIndices.add(currentRank);
+                    int nextRank = currentRank + 1;
+                    while (nextRank < sortedTeams.size() &&
+                            sortedTeams.get(nextRank).getValue().equals(currentScore)) {
+                        tiedIndices.add(nextRank);
+                        nextRank++;
+                    }
 
-                int nextRank = currentRank + 1;
-                while (nextRank < sortedTeams.size() && 
-                       sortedTeams.get(nextRank).getValue().equals(currentScore)) {
-                    tiedIndices.add(nextRank);
-                    nextRank++;
-                }
-
-                // Calculate average points for tied teams
-                double pointsToAward = pointsArray[pointsIndex];
-                if (tiedIndices.size() > 1) {
-                    // Average the points for this rank and next ones
-                    int pointsSum = 0;
-                    for (int i = 0; i < tiedIndices.size() && pointsIndex < pointsArray.length; i++) {
-                        pointsSum += pointsArray[pointsIndex];
+                    // Calculate average points for tied teams
+                    double pointsToAward = pointsArray[pointsIndex];
+                    if (tiedIndices.size() > 1) {
+                        // Average the points for this rank and next ones
+                        int pointsSum = 0;
+                        for (int i = 0; i < tiedIndices.size() && pointsIndex < pointsArray.length; i++) {
+                            pointsSum += pointsArray[pointsIndex];
+                            pointsIndex++;
+                        }
+                        pointsToAward = (double) pointsSum / tiedIndices.size();
+                    } else {
                         pointsIndex++;
                     }
-                    pointsToAward = (double) pointsSum / tiedIndices.size();
-                } else {
-                    pointsIndex++;
-                }
-                
-                System.out.println("    Rank " + (currentRank + 1) + ": " + tiedIndices.size() + " teams with gamePoints " + currentScore + ", assigning " + pointsToAward + " points each");
 
-                // Award points to all players on the tied teams
-                for (int idx : tiedIndices) {
-                    Long teamId = sortedTeams.get(idx).getKey();
-                    List<Long> playerIds = teamPlayers.get(teamId);
+                    System.out.println(
+                            "    Rank " + (currentRank + 1) + ": " + tiedIndices.size() + " teams with gamePoints "
+                                    + currentScore + ", assigning " + pointsToAward + " points each");
 
-                    if (playerIds != null) {
-                        for (Long playerId : playerIds) {
-                            LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
-                                pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
-                            entry.addRoundPoints(roundId, pointsToAward);
+                    // Award points to all players on the tied teams
+                    for (int idx : tiedIndices) {
+                        Long teamId = sortedTeams.get(idx).getKey();
+                        List<Long> playerIds = teamPlayers.get(teamId);
+
+                        if (playerIds != null) {
+                            for (Long playerId : playerIds) {
+                                LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
+                                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+                                entry.addRoundPoints(roundId, pointsToAward);
+                            }
                         }
                     }
-                }
 
-                currentRank = nextRank;
+                    currentRank = nextRank;
+                }
             }
-        }
-        
-        // Step 3: If vs_group is enabled, rank players within each tee time
-        if (round.getVsGroup() != null && round.getVsGroup()) {
-            System.out.println("  vsGroup enabled - calculating player points within tee times");
-            for (RoundTeeTime teeTime : teeTimes) {
-                assignPlayerPointsWithinTeeTime(teeTime, leaderboard, roundId);
+
+            // Step 3: If vs_group is enabled, rank players within each tee time
+            if (round.getVsGroup() != null && round.getVsGroup()) {
+                System.out.println("  vsGroup enabled - calculating player points within tee times");
+                for (RoundTeeTime teeTime : teeTimes) {
+                    assignPlayerPointsWithinTeeTime(teeTime, leaderboard, roundId);
+                }
             }
-        }
-        
+
         } catch (Exception e) {
             System.err.println("ERROR in assignTeamPoints: " + e.getMessage());
             e.printStackTrace();
         }
     }
-    
-    /**
-     * Rank players within a team and assign vs_group points
-     * For 2-Man Best Ball with vs_group:
-     * - 2 points for 1st place
-     * - 1.5 points for 2nd place
-     * - 1 point for 3rd place
-     * - 0.5 points for 4th place
-     * Ties: Average the points for tied positions
-     */
+
     /**
      * Rank all players within a tee time and assign vs_group points
      * All players in the tee time compete against each other
      * Points scale: 2.0, 1.5, 1.0, 0.5
      * Ties: Average the points for tied positions
      */
-    private void assignPlayerPointsWithinTeeTime(RoundTeeTime teeTime, Map<Long, LeaderboardEntryDto> leaderboard, Long roundId) {
+    private void assignPlayerPointsWithinTeeTime(RoundTeeTime teeTime, Map<Long, LeaderboardEntryDto> leaderboard,
+            Long roundId) {
         try {
             // Get all teams in this tee time
             List<RoundTeam> teamsInTeeTime = roundTeamRepository.findByRoundTeeTimeId(teeTime.getId());
             if (teamsInTeeTime.isEmpty()) {
                 return;
             }
-            
+
             // Collect all players and their net scores for this tee time
             Map<Long, Integer> playerNetScores = new HashMap<>();
             Map<Long, String> playerNames = new HashMap<>();
-            
+
             for (RoundTeam team : teamsInTeeTime) {
                 List<Long> teamPlayerIds = new ArrayList<>();
-                if (team.getPlayer1Id() != null && team.getPlayer1Id() > 0) teamPlayerIds.add(team.getPlayer1Id());
-                if (team.getPlayer2Id() != null && team.getPlayer2Id() > 0) teamPlayerIds.add(team.getPlayer2Id());
-                if (team.getPlayer3Id() != null && team.getPlayer3Id() > 0) teamPlayerIds.add(team.getPlayer3Id());
-                
+                if (team.getPlayer1Id() != null && team.getPlayer1Id() > 0)
+                    teamPlayerIds.add(team.getPlayer1Id());
+                if (team.getPlayer2Id() != null && team.getPlayer2Id() > 0)
+                    teamPlayerIds.add(team.getPlayer2Id());
+                if (team.getPlayer3Id() != null && team.getPlayer3Id() > 0)
+                    teamPlayerIds.add(team.getPlayer3Id());
+
                 for (Long playerId : teamPlayerIds) {
                     // Store player name
                     if (!playerNames.containsKey(playerId)) {
                         Optional<Player> playerOpt = playerRepository.findById(playerId);
-                        if (playerOpt.isPresent()) {
-                            Player player = playerOpt.get();
-                            playerNames.put(playerId, player.getFirstName() + " " + player.getLastName());
-                        }
+                        playerOpt.ifPresent(player -> playerNames.put(playerId, player.getFirstName() + " " + player.getLastName()));
                     }
-                    
+
                     // Get net score for this player in this tee time
                     List<PlayerScorecard> playerScorecards = playerScorecardRepository
-                        .findByRoundTeeTimeIdAndPlayerId(teeTime.getId(), playerId);
-                    
+                            .findByRoundTeeTimeIdAndPlayerId(teeTime.getId(), playerId);
+
                     int totalNetScore = playerScorecards.stream()
-                        .filter(sc -> sc.getNetScore() != null)
-                        .mapToInt(PlayerScorecard::getNetScore)
-                        .sum();
-                    
+                            .filter(sc -> sc.getNetScore() != null)
+                            .mapToInt(PlayerScorecard::getNetScore)
+                            .sum();
+
                     if (totalNetScore > 0) {
                         playerNetScores.put(playerId, totalNetScore);
                     }
                 }
             }
-            
+
             if (playerNetScores.size() < 2) {
                 return; // Need at least 2 players with scores for vs_group
             }
-            
+
             // Sort players by net score (ascending = best first)
             List<Map.Entry<Long, Integer>> sortedPlayers = playerNetScores.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue())
-                .collect(Collectors.toList());
-            
+                    .sorted(Map.Entry.comparingByValue())
+                    .toList();
+
             // vs_group points scale: 2.0, 1.5, 1.0, 0.5
-            double[] vsGroupPointsArray = {2.0, 1.5, 1.0, 0.5};
-            
+            double[] vsGroupPointsArray = { 2.0, 1.5, 1.0, 0.5 };
+
             int currentRank = 0;
             int pointsIndex = 0;
-            
+
             System.out.println("  Tee Time " + teeTime.getId() + ": ranking " + sortedPlayers.size() + " players");
-            
+
             while (currentRank < sortedPlayers.size() && pointsIndex < vsGroupPointsArray.length) {
                 // Find all players tied at current rank
                 Integer currentScore = sortedPlayers.get(currentRank).getValue();
                 List<Integer> tiedIndices = new ArrayList<>();
                 tiedIndices.add(currentRank);
-                
+
                 int nextRank = currentRank + 1;
-                while (nextRank < sortedPlayers.size() && 
-                       sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
+                while (nextRank < sortedPlayers.size() &&
+                        sortedPlayers.get(nextRank).getValue().equals(currentScore)) {
                     tiedIndices.add(nextRank);
                     nextRank++;
                 }
-                
+
                 // Calculate average points for tied players
                 double pointsSum = 0.0;
                 int pointsUsed = 0;
@@ -599,21 +599,23 @@ public class LeaderboardService {
                     pointsUsed++;
                 }
                 double avgPoints = pointsSum / pointsUsed;
-                
-                System.out.println("    Rank " + (currentRank + 1) + ": " + tiedIndices.size() + " players with score " + currentScore + ", assigning " + avgPoints + " points each");
-                
+
+                System.out.println("    Rank " + (currentRank + 1) + ": " + tiedIndices.size() + " players with score "
+                        + currentScore + ", assigning " + avgPoints + " points each");
+
                 // Award points to all tied players
                 for (int idx : tiedIndices) {
                     Long playerId = sortedPlayers.get(idx).getKey();
                     LeaderboardEntryDto entry = leaderboard.computeIfAbsent(playerId,
-                        pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
+                            pId -> new LeaderboardEntryDto(pId, playerNames.get(pId)));
                     entry.addRoundPoints(roundId, avgPoints);
                 }
-                
+
                 currentRank = nextRank;
             }
         } catch (Exception e) {
-            System.err.println("Error calculating player points for tee time " + teeTime.getId() + ": " + e.getMessage());
+            System.err
+                    .println("Error calculating player points for tee time " + teeTime.getId() + ": " + e.getMessage());
             e.printStackTrace();
         }
     }
@@ -624,103 +626,108 @@ public class LeaderboardService {
      */
     public List<RoundLeaderboardEntryDto> getRoundLeaderboard(Long roundId) {
         System.out.println("\n===== getRoundLeaderboard called for round " + roundId + " =====");
-        
+
         // Get tournament leaderboard to get total points for all players
         TournamentRound round = tournamentRoundRepository.findById(roundId).orElse(null);
         if (round == null) {
             System.out.println("Round not found");
             return new ArrayList<>();
         }
-        
+
         List<LeaderboardEntryDto> tournamentLeaderboard = getTournamentLeaderboard(round.getTournament().getId());
         Map<Long, LeaderboardEntryDto> tournamentLeaderboardMap = new HashMap<>();
         for (LeaderboardEntryDto entry : tournamentLeaderboard) {
             tournamentLeaderboardMap.put(entry.getPlayerId(), entry);
         }
-        
+
         // Get all tee times for this round
         List<RoundTeeTime> teeTimes = roundTeeTimeRepository.findAllByTournamentRoundId(roundId);
-        
+
         if (teeTimes.isEmpty()) {
             System.out.println("No tee times found for round");
             return new ArrayList<>();
         }
-        
+
         // Collect all players in this round and their scores
         Map<Long, Integer> playerGrossScores = new HashMap<>();
         Map<Long, Integer> playerParScores = new HashMap<>();
         Map<Long, Integer> playerHolesCompleted = new HashMap<>();
         Map<Long, String> playerNames = new HashMap<>();
-        
+
         for (RoundTeeTime teeTime : teeTimes) {
             List<PlayerScorecard> scorecards = playerScorecardRepository.findByRoundTeeTimeId(teeTime.getId());
-            
+
             for (PlayerScorecard scorecard : scorecards) {
                 Long playerId = scorecard.getPlayer().getId();
-                
+
                 // Store player name
                 if (!playerNames.containsKey(playerId)) {
-                    playerNames.put(playerId, scorecard.getPlayer().getFirstName() + " " + scorecard.getPlayer().getLastName());
+                    playerNames.put(playerId,
+                            scorecard.getPlayer().getFirstName() + " " + scorecard.getPlayer().getLastName());
                 }
-                
+
                 // Accumulate scores
                 if (scorecard.getGrossScore() != null) {
-                    playerGrossScores.put(playerId, playerGrossScores.getOrDefault(playerId, 0) + scorecard.getGrossScore());
+                    playerGrossScores.put(playerId,
+                            playerGrossScores.getOrDefault(playerId, 0) + scorecard.getGrossScore());
                 }
-                
+
                 if (scorecard.getHole() != null && scorecard.getHole().getPar() != null) {
-                    playerParScores.put(playerId, playerParScores.getOrDefault(playerId, 0) + scorecard.getHole().getPar());
+                    playerParScores.put(playerId,
+                            playerParScores.getOrDefault(playerId, 0) + scorecard.getHole().getPar());
                 }
-                
+
                 playerHolesCompleted.put(playerId, playerHolesCompleted.getOrDefault(playerId, 0) + 1);
             }
         }
-        
+
         if (playerGrossScores.isEmpty()) {
             System.out.println("No scores found for this round");
             return new ArrayList<>();
         }
-        
+
         // Create round leaderboard entries
         List<RoundLeaderboardEntryDto> roundLeaderboard = new ArrayList<>();
-        
+
         for (Long playerId : playerNames.keySet()) {
             Integer grossScore = playerGrossScores.getOrDefault(playerId, 0);
             Integer parScore = playerParScores.getOrDefault(playerId, 0);
             Integer netScore = grossScore - parScore;
             Integer thru = playerHolesCompleted.getOrDefault(playerId, 0);
-            
+
             // Get round points from tournament leaderboard
             LeaderboardEntryDto tourEntry = tournamentLeaderboardMap.get(playerId);
             Double roundPoints = 0.0;
             Double totalPoints = 0.0;
-            
+
             if (tourEntry != null) {
                 Double points = tourEntry.getRoundPoints().getOrDefault(roundId, 0.0);
                 roundPoints = points != null ? points : 0.0;
                 totalPoints = tourEntry.getTotalPoints() != null ? tourEntry.getTotalPoints() : 0.0;
             }
-            
+
             RoundLeaderboardEntryDto entry = new RoundLeaderboardEntryDto(
-                playerId,
-                playerNames.get(playerId),
-                netScore,
-                thru,
-                roundPoints,
-                totalPoints
-            );
-            
+                    playerId,
+                    playerNames.get(playerId),
+                    netScore,
+                    thru,
+                    roundPoints,
+                    totalPoints);
+
             roundLeaderboard.add(entry);
         }
-        
+
         // Sort by net score (ascending = best first)
         roundLeaderboard.sort((a, b) -> {
-            if (a.getScore() == null && b.getScore() == null) return 0;
-            if (a.getScore() == null) return 1;
-            if (b.getScore() == null) return -1;
+            if (a.getScore() == null && b.getScore() == null)
+                return 0;
+            if (a.getScore() == null)
+                return 1;
+            if (b.getScore() == null)
+                return -1;
             return a.getScore().compareTo(b.getScore());
         });
-        
+
         System.out.println("Round leaderboard has " + roundLeaderboard.size() + " entries");
         return roundLeaderboard;
     }
